--- a/specieswatch/app/Dockerfile
+++ b/specieswatch/app/Dockerfile
@@ -25,4 +25,4 @@ COPY . .
 
 EXPOSE 8501
 
-CMD ["streamlit", "run", "app.py", "--server.port=8501", "--server.enableCORS=false"]
+CMD ["streamlit", "run", "streamlit_app.py", "--server.port=8501", "--server.enableCORS=false"]
